--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,5 +1,5 @@
 /** {
-  outline: 1px solid red !important;
+  outline: 1px solid red ! very important;
 }*/
 * {
   -webkit-box-sizing: border-box;
